--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   
     <header>
-        <h1>header</h1>
+        header
     </header>
 
     <nav>
@@ -26,21 +26,21 @@
     <section>
             <p>section</p>
         <article>
-                <h3>article</h3>
-                <p>h1, h2, h3</p>
-                <p>p</p>
+                article
+                <h1 id="h123">h1, h2, h3</h1>
+                <p id="p1">p</p>
          </article>
     </section>    
     
 
     <aside id=aside>
-        <h1>aside</h1>
+        <p>aside</p>
     </aside>
 
 </div>
 
     <footer>
-        <p>Footer</p>
+        Footer
     </footer>
 
 </body>
